--- a/public/css/media.css
+++ b/public/css/media.css
@@ -190,6 +190,7 @@
     overflow: hidden;
 }
 
+
 .video-background {
     position: absolute;
     top: -420px;
@@ -198,6 +199,34 @@
     height: calc(100% + 600px);
     object-fit: cover;
     z-index: -10;
+
+    -webkit-mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
+}
+
+.hero-section::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to top,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0.8) 30%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    z-index: -5;
 }
 
 @media screen and (max-width: 768px) {
