--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,18 @@
     width: 100%;
     height: 700px;
     overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    line-height: 20px;
+}
+
+
+.center-text h1 h2 p{
+    position: absolute;
+    font-family: 'Roboto', sans-serif;
+    font-size: 56px;
+    bottom: 100px;
+    padding-left: 50px;
+    color: #FFFFFF;
 }
 
 .video-background {
@@ -45,6 +57,7 @@
     );
     z-index: -5;
 }
+
 
 @media screen and (max-width: 768px) {
     .video-background {
