--- a/public/css/about.css
+++ b/public/css/about.css
@@ -600,6 +600,17 @@
 }
 
 
+.counter {
+    font-family: 'Roboto', sans-serif;
+    color: #EFA32F;
+    font-size: 64px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-align: center;
+}
+
+
 
 
 
