--- a/public/css/home.css
+++ b/public/css/home.css
@@ -171,15 +171,16 @@
     font-weight: 500;
 }
 
-.headline-card-two h2 {
+.counter {
     font-family: 'Roboto', sans-serif;
     color: #EFA32F;
     font-size: 64px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
     font-weight: 500;
     text-align: center;
 }
+
 
 .headline-card p {
     font-family: 'Roboto', sans-serif;
