--- a/public/css/about.css
+++ b/public/css/about.css
@@ -16,6 +16,8 @@
     --font-family: 'Roboto', sans-serif;
 }
 
+
+
 /* Add these at the top of the file */
 html, body {
     overflow-x: hidden;
@@ -77,7 +79,7 @@ html, body {
     font-family: var(--font-family);
     color: var(--color-white);
     text-decoration: none;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 500;
     padding-bottom: 16px;
     position: relative;
@@ -88,25 +90,12 @@ html, body {
 
 .filter-link.active {
     color: var(--color-primary);
-    font-family: var(--font-family);
+    text-decoration: none;
 }
 
 .filter-link.active::after {
-
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--color-primary);
+    display: none;
 }
-
-
-
-
-
-
 
 /* Newsletter section styles remain unchanged */
 .newsletter-section {
@@ -508,7 +497,7 @@ html, body {
     font-family: var(--font-family);
     color: var(--color-white);
     text-decoration: none;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 500;
     padding-bottom: 16px;
     position: relative;
@@ -519,18 +508,11 @@ html, body {
 
 .filter-link.active {
     color: var(--color-primary);
-    font-family: var(--font-family);
+    text-decoration: none;
 }
 
 .filter-link.active::after {
-
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--color-primary);
+    display: none;
 }
 
 
@@ -750,8 +732,18 @@ html, body {
 
 
 
+.team-title-section {
+    padding-top: 0px;
+    padding-bottom: 40px;
+}
 
+.grid-headline-title-card{
+    grid-column: span 1;
+}
 
+.grid-headline-description-card{
+    grid-column: span 2;
+}
 
 
 
@@ -785,6 +777,14 @@ html, body {
 .headline-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+.headline-grid-two {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     max-width: 1600px;
     margin: 0 auto;
     padding: 0 40px;
@@ -873,10 +873,23 @@ html, body {
     position: relative;
     font-family: var(--font-family);
     color: var(--color-white);
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 500;
     text-align: left;
-    margin-left: 65px;
+    margin-left: 0px;
+    margin-right: 90px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+
+.grid-headline-subtitle {
+    position: relative;
+    font-family: var(--font-family);
+    color: var(--color-white);
+    font-size: 14px;
+    font-weight: 500;
+    text-align: left;
+    margin-left: 0px;
     margin-right: 90px;
     margin-top: 60px;
     margin-bottom: 40px;
@@ -1071,7 +1084,7 @@ html, body {
 /* Newsletter Section Styles */
 .newsletter-section {
     background-color: var(--color-black);
-    padding-top: 80px;
+    padding-top: 0px;
     padding-bottom: 60px;
     position: relative;
     margin-top: 60px;
@@ -1173,6 +1186,7 @@ html, body {
     position: relative;
     width: 100%;
     overflow: hidden;
+    padding-bottom: 40px;
 }
 .team-card {
     position: relative;
