--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -183,12 +183,14 @@ body.menu-open {
 }
 
 .lang-link.active {
-    color: #ffd700;
+    background-color: #808080;
+    border-radius: 50%;
+    padding: 8px 8px;
 }
 
 .lang-separator {
     color: #fff;
-    margin: 0 4px;
+    margin: 0 5px;
 }
 
 /* Mobile Styles */
