--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -332,7 +332,7 @@
     font-family: 'Roboto', sans-serif;
     color: white;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 500;
     padding-bottom: 16px;
     position: relative;
@@ -345,14 +345,7 @@
 }
 
 .filter-link.active::after {
-
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #FFD700;
+    display: none;
 }
 
 
