--- a/public/css/about.css
+++ b/public/css/about.css
@@ -777,16 +777,6 @@ body {
     z-index: 1;
 }
 
-.category {
-    font-family: var(--font-family);
-    font-size: var(--font-size-base);;
-    position: absolute;
-    top: 80px;
-    left: 20px;
-    color: #FFD700;
-    font-weight: 200;
-    z-index: 2;
-}
 
 .category-highlight {
     font-family: var(--font-family);
@@ -889,7 +879,7 @@ body {
 
 .tag-container-highlight {
     position: absolute;
-    bottom: 120px;
+    top: 30px;
     right: 30px;
     display: flex;
     gap: 10px;
@@ -1106,6 +1096,10 @@ body {
     height: 352px;
     grid-column: span 1;
     border-radius: 12px;
+
+    display: flex;
+flex-direction: column;
+justify-content: flex-start;
 }
 
 .card-profile-photo {
@@ -1269,26 +1263,30 @@ body {
     display: block;
 }
 
+.text-decoration-none{
+    text-decoration: none;
+}
+
 .category {
     font-family: var(--font-family);
-    font-size: var(--font-size-base);;
-    position: absolute;
-    top: 160px;
-    left: 30px;
+    font-size: var(--font-size-base);
+    position: relative;
+    padding: 160px 30px 5px;
     color: var(--color-secondary);
     font-weight: 500;
     z-index: 2;
+    display: flex;
+    text-decoration: none;
 }
 
 .card-ecosystem-content {
     font-family: var(--font-family);
-    font-size: var(--font-size-base);;
-    position: absolute;
+    font-size: var(--font-size-base);
+    position: relative;
     color: #A1A1AA;
-    top: 190px;
-    left: 30px;
-    right: 30px;
+    padding: 10px 30px;
     z-index: 2;
+    text-decoration: none;
 }
 
 .card-ecosystem h2 {
@@ -1523,7 +1521,8 @@ body {
     }
 
     .tag-container-highlight {
-        margin: 0 0 140px 0;
+        position: absolute;
+        top:120px;
         text-align: center;
         display: flex;
         justify-content: center;
@@ -1544,6 +1543,7 @@ body {
         text-align: center;
         color: var(--color-primary);
     }
+
 
     .card-ecosystem-content-highlight {
         font-size: var(--font-size-base);;
